[project]
name = "uday"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cohere>=5.21.1",
    "langchain-cohere>=0.6.0",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.3.3",
    "langgraph>=1.2.6",
    "python-dotenv>=1.2.2",
    "streamlit>=1.58.0",
    "tavily-python>=0.7.26",
]
